--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "react-dom": "17.0.1"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.7",
+    "tailwindcss": "^2.0.3"
+  }
 }
