--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-ghost-dummy",
-  "version": "0.1.0",
+  "name": "good-life-revival",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tryghost/content-api": "^1.5.0",
+    "date-fns": "^2.19.0",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
