--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.7",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.3"
   }
 }
